<resources>
    <string name="app_name">CreaseArt</string>

    <string name="message_network_problem">Please check your internet connectivity.</string>
    <string name="message_problem">Opps! Something went wrong, please try again.</string>
    <string name="problem_server">Problem connecting to server, Please try later.</string>
    <string name="some_error_occurred">Unable to connect to the service, please try again later.</string>
    <string name="timeout">Time out</string>
    <string name="no_internet_connection">No Internet connection.  Please check your network settings.</string>
    <string name="alert_internet_connection">Please check your internet connection.</string>


    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_enter_mbno">Enter Mobile Number</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="sign_in">User Sign In</string>
    <string name="log_in">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_emailid">Please enter valid emailid</string>
    <string name="or">OR</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="validEmail">Please Enter Valid Email Id</string>
    <string name="mobileno_Length">Please Enter Valid Number</string>

    <string name="enter_name">Please enter Name</string>
    <string name="enter_mb">Please enter Mobile Number</string>
    <string name="enter_address">Please enter Address</string>
    <string name="password">Please enter Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_city">Select City</string>
    <string name="select_locality">Select Locality</string>
    <string name="select_zone">Select Zone</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="bokings">Service Request</string>
    <string name="pickupdeliveredorder">Delivered Order</string>
    <string name="changepassword">Change Password</string>
    <string name="shareapp">Share App</string>
    <string name="activepackage">Active Packages</string>

    <string name="transactionhistory">Transaction History</string>
    <string name="familyaccount">Family Account</string>
    <string name="redeem">Redeem</string>
    <string name="service_request">Service Request</string>
    <string name="offers">Offers</string>
    <string name="coupans">Coupans</string>
    <string name="how_it_works">How it works</string>
    <string name="packages">Packages</string>
    <string name="wallet">Wallet</string>
    <string name="please_select_zone">Please select zone</string>
    <string name="please_select_locality">Please select locality</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_select_state">Please select state</string>
    <string name="action_search">Search</string>
</resources>
