<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.creaseart.activities.SignupActivity"
    tools:showIn="@layout/activity_signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSignup"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp20">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp20"
                android:src="@drawable/loginlogo" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20">

                <EditText
                    android:id="@+id/edtFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:padding="@dimen/dp10"
                    android:singleLine="true"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_14" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5">

                <EditText
                    android:id="@+id/edtEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp10"
                    android:singleLine="true"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_14" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5">

                <EditText
                    android:id="@+id/edtMobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile Number"
                    android:inputType="number"
                    android:maxLength="11"
                    android:padding="@dimen/dp10"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_14" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_address"
                    android:padding="@dimen/dp10"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_14" />

            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:id="@+id/rl_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spinner_city"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="@dimen/dp10"
                    android:gravity="bottom"
                    android:hint="@string/select_city"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_13" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/spinner_city"
                    android:background="@color/view_color" />

            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp10"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_14" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:background="@color/white">

                <CheckBox
                    android:id="@+id/checkbox_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/text_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/checkbox_terms"
                    android:text="I agree with terms and condition and privacy policy"

                    android:textSize="@dimen/text_size_12" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp20"
        android:background="@drawable/button_selector"
        android:text="Signup"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />

</RelativeLayout>
